--- a/edu.html
+++ b/edu.html
@@ -249,6 +249,15 @@
       margin: 24px auto 32px;
       text-align: center;
     }
+
+    /* Header scroll transition */
+    .header {
+      transition: background-color 0.3s ease, box-shadow 0.3s ease, border-color 0.3s ease;
+    }
+    .header .toggle-text,
+    .header .page-label {
+      transition: color 0.3s ease;
+    }
   </style>
 </head>
 <body class="body">
@@ -276,7 +285,7 @@
               </a>
             </div>
             <div class="nav-bottom-div">
-              <div class="small-paragraph nav-bottom-text">Semperr | Stop Hiring. Start Automating.</div>
+              <div class="small-paragraph nav-bottom-text">Semperr | Learn once. Teach forever.</div>
             </div>
             <div class="social-media-link-div">
               <a href="https://www.linkedin.com/" target="_blank" class="paragraph social-media-link">LinkedIn</a>
@@ -325,10 +334,10 @@
   <!-- What You'll Learn Section -->
   <section class="section">
     <div class="w-layout-blockcontainer container w-container">
-      <div class="common-heading-div" style="text-align: center; margin-bottom: 60px;">
+      <div class="common-heading-div" style="text-align: left; margin-bottom: 60px;">
         <div class="sub-heading">Course Overview</div>
         <h2 class="h2-heading">Everything is Practical</h2>
-        <p class="paragraph" style="max-width: 600px; margin: 16px auto 0;">Every session is hands-on. You'll build real projects, use industry tools, and walk away with skills you can apply immediately.</p>
+        <p class="paragraph" style="max-width: 600px; margin: 16px 0 0;">Every session is hands-on. You'll build real projects, use industry tools, and walk away with skills you can apply immediately.</p>
       </div>
 
       <div class="w-layout-grid our-ecosystem-grid" style="gap: 32px;">
@@ -777,7 +786,7 @@
   <script src="https://d3e54v103j8qbb.cloudfront.net/js/jquery-3.5.1.min.dc5e7f18c8.js?site=68e2b5017ce335565e4212dc" type="text/javascript" integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0=" crossorigin="anonymous"></script>
   <script src="js/webflow.js" type="text/javascript"></script>
 
-  <!-- Typewriter Effect -->
+  <!-- Typewriter Effect & Header Scroll Behavior -->
   <script>
     const phrases = [
       "Built by UC Berkeley Engineers",
@@ -819,9 +828,42 @@
       setTimeout(type, typingSpeed);
     }
 
-    // Start typewriter when page loads
+    // Header scroll behavior - matches index page
     document.addEventListener('DOMContentLoaded', function() {
+      // Start typewriter
       setTimeout(type, 1000);
+
+      // Header scroll effect
+      const header = document.querySelector('.header');
+      const heroSection = document.querySelector('.hero-section');
+
+      if (header && heroSection) {
+        const heroHeight = heroSection.offsetHeight;
+
+        window.addEventListener('scroll', function() {
+          const scrollY = window.scrollY;
+
+          if (scrollY > heroHeight - 100) {
+            header.style.backgroundColor = 'white';
+            header.style.boxShadow = '0 2px 20px rgba(0, 0, 0, 0.08)';
+            header.style.borderBottom = '1px solid #e7e7e7';
+            // Change text colors for visibility on white bg
+            const toggleText = header.querySelector('.toggle-text');
+            const pageLabel = header.querySelector('.page-label');
+            if (toggleText) toggleText.style.color = '#262626';
+            if (pageLabel) pageLabel.style.color = '#262626';
+          } else {
+            header.style.backgroundColor = 'transparent';
+            header.style.boxShadow = 'none';
+            header.style.borderBottom = '1px solid transparent';
+            // Revert text colors for dark bg
+            const toggleText = header.querySelector('.toggle-text');
+            const pageLabel = header.querySelector('.page-label');
+            if (toggleText) toggleText.style.color = 'white';
+            if (pageLabel) pageLabel.style.color = 'white';
+          }
+        });
+      }
     });
   </script>
 </body>
