--- a/edu.html
+++ b/edu.html
@@ -254,9 +254,12 @@
     .header {
       transition: background-color 0.3s ease, box-shadow 0.3s ease, border-color 0.3s ease;
     }
-    .header .toggle-text,
-    .header .page-label {
+    .header .toggle-text {
       transition: color 0.3s ease;
+    }
+    .header .logo,
+    .header .menu-toggle {
+      transition: filter 0.3s ease;
     }
   </style>
 </head>
@@ -847,20 +850,24 @@
             header.style.backgroundColor = 'white';
             header.style.boxShadow = '0 2px 20px rgba(0, 0, 0, 0.08)';
             header.style.borderBottom = '1px solid #e7e7e7';
-            // Change text colors for visibility on white bg
+            // Change text/icon colors for visibility on white bg
             const toggleText = header.querySelector('.toggle-text');
-            const pageLabel = header.querySelector('.page-label');
+            const menuToggle = header.querySelector('.menu-toggle');
+            const logo = header.querySelector('.logo');
             if (toggleText) toggleText.style.color = '#262626';
-            if (pageLabel) pageLabel.style.color = '#262626';
+            if (menuToggle) menuToggle.style.filter = 'brightness(0%) invert(13%) sepia(11%) saturate(3%) hue-rotate(314deg) brightness(95%) contrast(93%)';
+            if (logo) logo.style.filter = 'brightness(0%) invert(13%) sepia(11%) saturate(3%) hue-rotate(314deg) brightness(95%) contrast(93%)';
           } else {
             header.style.backgroundColor = 'transparent';
             header.style.boxShadow = 'none';
             header.style.borderBottom = '1px solid transparent';
-            // Revert text colors for dark bg
+            // Revert to white/light appearance
             const toggleText = header.querySelector('.toggle-text');
-            const pageLabel = header.querySelector('.page-label');
+            const menuToggle = header.querySelector('.menu-toggle');
+            const logo = header.querySelector('.logo');
             if (toggleText) toggleText.style.color = 'white';
-            if (pageLabel) pageLabel.style.color = 'white';
+            if (menuToggle) menuToggle.style.filter = 'none';
+            if (logo) logo.style.filter = 'none';
           }
         });
       }
